Remove doctype params / Add elements to list

--- a/elements.html
+++ b/elements.html
@@ -24,6 +24,7 @@
 <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="bower_components/paper-input/paper-input.html">
+<link rel="import" href="bower_components/paper-input/paper-textarea.html">
 <link rel="import" href="bower_components/paper-toggle-button/paper-toggle-button.html">
 <link rel="import" href="bower_components/paper-button/paper-button.html">
 <link rel="import" href="bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
@@ -66,6 +67,7 @@
 <link rel="import" href="bower_components/poly-elements/poly-checkbox.html">
 <link rel="import" href="bower_components/poly-elements/poly-fab.html">
 <link rel="import" href="bower_components/poly-elements/poly-label.html">
+<link rel="import" href="bower_components/poly-elements/poly-paragraph.html">
 <link rel="import" href="bower_components/poly-elements/poly-icon-button.html">
 
 <link rel="import" href="bower_components/poly-layout/poly-layout.html">
