--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -359,7 +359,8 @@
                         <polytipe-item icon="check-box" onclick="makeElement('poly-checkbox')">Checkbox</polytipe-item>
                         <polytipe-item icon="add-circle" onclick="makeElement('poly-fab')">Floating Action Button</polytipe-item>
                         <polytipe-item icon="star" onclick="makeElement('poly-icon-button')">Icon</polytipe-item>
-                        <polytipe-item icon="editor:format-color-text" onclick="makeElement('poly-label')">Label</polytipe-item>
+                        <polytipe-item icon="editor:short-text" onclick="makeElement('poly-label')">Label</polytipe-item>
+                        <polytipe-item icon="editor:format-align-left" onclick="makeElement('poly-paragraph')">Párrafo</polytipe-item>
                         <polytipe-item icon="dashboard" onclick="makeElement('poly-layout')">Layout</polytipe-item>
                         <polytipe-item icon="tab" onclick="makeElement('poly-tabs')">Tabs</polytipe-item>
                         <polytipe-item icon="av:web-asset" onclick="makeElement('poly-toolbar')">Toolbar</polytipe-item>
@@ -404,6 +405,7 @@
                     </section>
                     <section id="editor_styles">
                       <div id="styles_list" class="sidebar_list">
+                        <!-- TODO: Add flex option (boolean) -->
                         <!-- IDEA: Add a reset styles button -->
                         <paper-input label="width"></paper-input>
                         <paper-input label="height"></paper-input>
