--- a/styles.html
+++ b/styles.html
@@ -56,6 +56,11 @@
 		--paper-input-container-focus-color: var(--polytipe-accent-color);
 	}
 
+  .sidebar_panel paper-textarea{
+    --paper-input-container-input-color: white;
+    --paper-input-container-focus-color: var(--polytipe-accent-color);
+  }
+
   paper-fab{
     --paper-fab-keyboard-focus-background: var(--polytipe-accent-color);
   }
