--- a/styles.html
+++ b/styles.html
@@ -112,6 +112,9 @@
   .sidebar_list{
     padding: 20px;
   }
+  .sidebar_list2{
+    padding: 10px 20px;
+  }
 
   #properties_placeholder{
     position: absolute;
@@ -281,6 +284,7 @@
     border: none;
   }
   paper-toast{
+    background-color: #424242;
     color: white;
   }
   paper-material{
@@ -349,6 +353,10 @@
     font-size: 13px;
     line-height: 13px;
   }
+  #last_saved{
+    margin-top: 4px;
+  }
+
 
   /* Drawer toolbar */
   #drawer_toolbar{
