--- a/styles.html
+++ b/styles.html
@@ -227,6 +227,21 @@
   #element_actions{
     display: none;
   }
+  #link_dropdown{
+    display: none;
+    padding: 0 20px 20px 20px;
+  }
+  #link_screen{
+    width: 100%;
+    --paper-input-container-input-color: white;
+		--paper-input-container-focus-color: var(--polytipe-accent-color);
+  }
+
+  #link_screen paper-item{
+    position: relative;
+    min-height: 32px;
+    width: 177px;
+  }
   .move_button{
     background-color: var(--polytipe-bg-color);
     color: white;
